<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="50sp"
      />
    <TextView
        android:id="@+id/amount"
        android:layout_below="@id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_amount"
        android:textSize="22sp"
        android:layout_marginTop="50sp"

        />
    <EditText
        android:id="@+id/income_input"
        android:layout_below="@id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <Button
        android:id="@+id/enter_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/income_input"
        android:text="@string/enter"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>